Makes bankroll, walkaway input args.

--- a/RouletteSimulation.ipynb
+++ b/RouletteSimulation.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "bc4ae278",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "def wheel_in_the_sky():\n",
-    "    bankroll = 512\n",
-    "    walkaway = 612\n",
+    "def wheel_in_the_sky(bankroll, walkaway):\n",
+    "    if walkaway <= bankroll:\n",
+    "        raise Exception(\"Walkaway must be greater than Bankroll.\")\n",
+    "        \n",
     "    bet = 1\n",
     "    pockets = [\"Group1\"] * 12 + [\"Group2\"] * 12 + [\"Group3\"] * 12 + [\"Green\"] * 2\n",
     "    last_three = [\"\", \"\", \"\"]\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "df2ea1a5",
    "metadata": {},
    "outputs": [
@@ -70,8 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "80.5\n",
-      "713.8844720496894\n"
+      "80.86\n",
+      "714.0954736581746\n"
      ]
     }
    ],
@@ -80,8 +81,8 @@
     "bankrolls = []\n",
     "wins = []\n",
     "\n",
-    "for i in range(1000):\n",
-    "    journeys.append(wheel_in_the_sky()[-1:][0])\n",
+    "for i in range(5000):\n",
+    "    journeys.append(wheel_in_the_sky(512, 612)[-1:][0])\n",
     "\n",
     "for x in journeys:\n",
     "    bankrolls.append(x['Bankroll'])\n",
@@ -98,7 +99,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "791f1d0c",
+   "id": "0787f854",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88f5953e",
    "metadata": {},
    "outputs": [],
    "source": []
